--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,11 +71,11 @@ flutter:
     - assets/images/china.png
     - assets/images/czech-republic.png
     - assets/images/denmark.png
-    - assets/images/england.png
     - assets/images/finland.png
     - assets/images/france.png
     - assets/images/germany.png
     - assets/images/honduras.png
+    - assets/images/hungary.png
     - assets/images/india.png
     - assets/images/iran.png
     - assets/images/italy.png
@@ -102,6 +102,7 @@ flutter:
     - assets/images/sweden.png
     - assets/images/switzerland.png
     - assets/images/turkey.png
+    - assets/images/england.png
     - assets/images/united-states.png
     - assets/images/vietnam.png
 
