--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.5
   google_fonts: ^3.0.1
+  cached_network_image: ^3.2.1
+  shimmer: ^2.0.0
 
 dev_dependencies:
   flutter_test:
