--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^3.0.1
   cached_network_image: ^3.2.1
   shimmer: ^2.0.0
+  firebase_core: ^2.4.0
 
 dev_dependencies:
   flutter_test:
