--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   cached_network_image: ^3.2.1
   shimmer: ^2.0.0
   firebase_core: ^2.4.0
+  firebase_auth: ^4.2.1
+  flutter_native_splash: ^2.2.9
+  flutter_signin_button: ^2.0.0
 
 dev_dependencies:
   flutter_test:
