--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_auth: ^4.2.1
   flutter_native_splash: ^2.2.9
   flutter_signin_button: ^2.0.0
+  email_validator: ^2.1.17
 
 dev_dependencies:
   flutter_test:
