--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   flutter_native_splash: ^2.2.9
   flutter_signin_button: ^2.0.0
   email_validator: ^2.1.17
+  google_sign_in: ^5.4.2
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
