--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   google_sign_in: ^5.4.2
   get: ^4.6.5
   font_awesome_flutter: ^9.2.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
