--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   get: ^4.6.5
   font_awesome_flutter: ^9.2.0
   provider: ^6.0.5
+  flutter_facebook_auth: ^5.0.6
 
 dev_dependencies:
   flutter_test:
