--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,10 +44,9 @@ dependencies:
   flutter_signin_button: ^2.0.0
   email_validator: ^2.1.17
   google_sign_in: ^5.4.2
-  get: ^4.6.5
   font_awesome_flutter: ^9.2.0
   provider: ^6.0.5
-  flutter_facebook_auth: ^5.0.6
+  cloud_firestore: ^4.2.0
 
 dev_dependencies:
   flutter_test:
